--- a/LawyerbackEnd/LawyerbackEnd/Areas/Admin/Views/Contact/AllContactIndex.cshtml
+++ b/LawyerbackEnd/LawyerbackEnd/Areas/Admin/Views/Contact/AllContactIndex.cshtml
@@ -1,5 +1,5 @@
 ﻿
-@model IList<Contact>
+@*@model IList<Contact>
 
 <table class="table table-bordered">
     <thead>
@@ -36,4 +36,4 @@
 
 
     </tbody>
-</table>
+</table>*@
