--- a/LawyerbackEnd/LawyerbackEnd/Views/Shared/_Layout.cshtml
+++ b/LawyerbackEnd/LawyerbackEnd/Views/Shared/_Layout.cshtml
@@ -31,17 +31,9 @@
             </div>
             <div class="nav-holder nav-holder-1">
                 <ul class="menu-nav  menu-nav-1">
-                    <li class="menu-item menu-item-has-children current-menu-item">
-                        <a href="index.html">Home</a>
-                        <ul class="sub-menu">
-                            <li class="menu-item current-menu-item"><a href="index.html">Home 1</a></li>
-                            <li class="menu-item"><a href="home-2.html">Home 2</a></li>
-                            <li class="menu-item"><a href="home-3.html">Home 3</a></li>
-                            <li class="menu-item"><a href="home-4.html">Home 4</a></li>
-                            <li class="menu-item"><a href="home-video.html">Home Video</a></li>
-                            <li class="menu-item"><a href="top-header-2.html">Top Header 2</a></li>
-                            <li class="menu-item"><a href="top-header-3.html">Top Header 3</a></li>
-                        </ul>
+                    <li class="">
+                        <a asp-action="Index" asp-controller="Home">Home</a>
+                        
                     </li>
                     <li class="menu-item menu-item-has-children">
                         <a href="#">Pages</a>
